docs - fix layout shift when expanding TOC

--- a/docs/source/_static/theme-override.css
+++ b/docs/source/_static/theme-override.css
@@ -79,3 +79,8 @@ tbody tr:hover {
         grid-template-columns: 310px minmax(0, 1fr);
     }
 }
+
+/* Always enable scrollbar in left TOC to prevent layout shifts when expanding */
+#left-sidebar {
+    overflow-y: scroll;
+}
